--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,14 @@
             <artifactId>hibernate-validator</artifactId>
             <version>4.1.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+
+        <!--Statistics collection-->
+
 
         <!--LOGGING-->
         <dependency>
