--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootCategory=INFO, stdout, file
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
+log4j.appender.stdout.layout.ConversionPattern=%d %-5p [THREAD %t] [%c] - <%m>%n
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
@@ -10,7 +10,7 @@ log4j.appender.file.File=logs/server.log
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [THREAD %t] [%c] - <%m>%n
 
 #log4j.category.org.apache.activemq=ERROR
 #log4j.category.org.springframework.batch=ERROR
