Added transaction logging

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -28,6 +28,7 @@ log4j.logger.org.hibernate.pretty.Printer=DEBUG
 log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #Query result values are shown
 #log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
+log4j.logger.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 
 log4j.logger.org.hibernate=WARN
