Update logging info

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,12 +12,6 @@ log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [THREAD %t] [%c] - <%m>%n
 
-#log4j.category.org.apache.activemq=ERROR
-#log4j.category.org.springframework.batch=ERROR
-#log4j.category.org.springframework.transaction=INFO
-
-#log4j.category.org.hibernate.SQL=DEBUG
-
 # DB Table metadata loading
 #log4j.logger.org.hibernate.tool.hbm2ddl.TableMetadata=INFO
 log4j.logger.org.hibernate.SQL=DEBUG
@@ -30,16 +24,10 @@ log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
 log4j.logger.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-
 log4j.logger.org.hibernate=WARN
 
 #log4j.logger.org.hibernate.engine.query=TRACE
 #log4j.logger.org.hibernate.jdbc=TRACE
-
-
-# Validation (when saving data)
-log4j.logger.javax.validation=DEBUG
-
 
 #serialization
 #log4j.logger.org.springframework.bean.factory.xml.*=DEBUG
@@ -47,22 +35,12 @@ log4j.logger.org.springframework.data.repository.config.RepositoryBeanDefinition
 log4j.logger.org.springframework.web.servlet.mvc.method.annotation.HttpEntityMethodProcessor=DEBUG
 #log4j.logger.org.springframework.data.repository.config.*=DEBUG
 
-#Authentication
-log4j.logger.org.springframework.security=DEBUG
-
 #Controller logic (resolver+result)
 log4j.logger.org.springframework.web.servlet.DispatcherServlet=DEBUG
 log4j.logger.org.springframework.web.context.ContextLoaderListener=DEBUG
 log4j.logger.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
 
-
-#REST + HATEOAS
-log4j.logger.org.springframework.hateoas=DEBUG
-
-#JSP View logging
-#log4j.logger.org.springframework.web.servlet.view.JstlView=DEBUG
-
 #if response not found
 log4j.logger.org.springframework.web.servlet.mvc.annotation.ResponseStatusExceptionResolver=DEBUG
 
-log4j.logger.ee.playtech=DEBUG
+log4j.logger.com.playtech.wallet=DEBUG
