--- a/pom.xml
+++ b/pom.xml
@@ -149,21 +149,46 @@
         <finalName>wallet</finalName>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
             </plugin>
+
+            <!--XSD generation-->
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>schemagen</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <includes>
+                                <include>com/playtech/wallet/domain/messages/*.java</include>
+                            </includes>
+                            <outputDirectory>${project.build.directory}/generated-resources/schemas</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+            <!--Unit and Integration tests-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
                 <!-- Separates the unit tests from the integration tests. -->
                 <configuration>
                     <!-- Skip the default running of this plug-in (or everything is run twice...see below) -->
                     <skip>true</skip>
-                    <!--<includes>-->
-                    <!--<include>**/*Test.java</include>-->
-                    <!--</includes>-->
                 </configuration>
                 <executions>
                     <execution>
