--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.springapp</groupId>
     <artifactId>wallet</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>protostuff-spring-web</module>
+    </modules>
     <name>wallet</name>
 
     <properties>
@@ -84,6 +87,7 @@
             <version>2.2.9</version>
         </dependency>
 
+        <!--MESSAGE FORMATS-->
         <!--JSON: jackson mapper-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -95,6 +99,24 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+        <!--PROTOBUF-->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dyuproject.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>1.0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dyuproject.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.0.8</version>
+        </dependency>
+
 
         <!--VALIDATION-->
         <dependency>
@@ -194,6 +216,42 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!--PROTOSTFF-->
+            <!--<plugin>-->
+                <!--<groupId>com.dyuproject.protostuff</groupId>-->
+                <!--<artifactId>protostuff-maven-plugin</artifactId>-->
+                <!--<version>1.0.8</version>-->
+                <!--<configuration>-->
+                    <!--<protoModules>-->
+                        <!--<protoModule>-->
+                            <!--&lt;!&ndash;${project.build.directory}/generated-resources/protobuf&ndash;&gt;-->
+                            <!--<source>src/main/resources/media.proto</source>-->
+                            <!--&lt;!&ndash;<source>${project.build.directory}/generated-resources/protobuf</source>&ndash;&gt;-->
+                            <!--<outputDir>target/generated-sources</outputDir>-->
+                            <!--<output>java_bean</output>-->
+                            <!--<encoding>UTF-8</encoding>-->
+                            <!--<options>-->
+                                <!--<property>-->
+                                    <!--<name>separate_schema</name>-->
+                                <!--</property>-->
+                                <!--<property>-->
+                                    <!--<name>generate_field_map</name>-->
+                                <!--</property>-->
+                            <!--</options>-->
+                        <!--</protoModule>-->
+                    <!--</protoModules>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>generate-sources</id>-->
+                        <!--<phase>generate-sources</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>compile</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
 
 
             <!--Unit and Integration tests-->
