--- a/protostuff-spring-web/pom.xml
+++ b/protostuff-spring-web/pom.xml
@@ -16,7 +16,7 @@
     <url>http://www.springframework.org/osgi</url>
 
     <properties>
-        <slf4j.version>1.5.0</slf4j.version>
+        <slf4j.version>1.6.1</slf4j.version>
         <spring.maven.artifact.version>3.2.0.RELEASE</spring.maven.artifact.version>
         <spring.osgi.version>1.2.1</spring.osgi.version>
         <equinox.ver>3.2.2</equinox.ver>
@@ -69,33 +69,43 @@
         <!--</dependency>-->
 
 
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>com.springsource.slf4j.org.apache.commons.logging</artifactId>-->
+            <!--<version>${slf4j.version}</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>com.springsource.slf4j.api</artifactId>-->
+            <!--<version>${slf4j.version}</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>com.springsource.slf4j.log4j</artifactId>-->
+            <!--<version>${slf4j.version}</version>-->
+            <!--<scope>provided</scope>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<groupId>log4j</groupId>-->
+                    <!--<artifactId>log4j</artifactId>-->
+                <!--</exclusion>-->
+                <!--<exclusion>-->
+                    <!--<groupId>org.apache.log4j</groupId>-->
+                    <!--<artifactId>com.springsource.org.apache.log4j</artifactId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>com.springsource.slf4j.org.apache.commons.logging</artifactId>
+            <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>com.springsource.slf4j.api</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>com.springsource.slf4j.log4j</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.log4j</groupId>
-                    <artifactId>com.springsource.org.apache.log4j</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.13</version>
         </dependency>
 
         <!--Protobuf-->
